# mcp-obsidian-index

./: .gitignore  CLAUDE.md  Dockerfile  README.md  TESTING.md  pyproject.toml
scripts/: benchmark.py  test_search_size.py
src/obsidian_index/: main.py  mcp_server.py
src/obsidian_index/index/: coordinator.py  database.py  database_sqlite.py  encoder.py  indexer.py  messages.py  models.py  searcher.py  worker.py
